tests/ui/fail/invalid_byte_order_param.rs
use packetrs::prelude::*;

#[derive(PacketrsRead)]
#[packetrs(byte_order = "blah")]
struct Foo {
}

fn main() {}
